2007-04-06  Paul J Stevens <paul@nfg.nl>
	
	* README.usermap, UPGRADING:
	documentation update

2007-04-06  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-user.c, user.c:
	Moved definitions of the verbosity variables from dbmail-user.c to
	user.c to avoid multiple definitions
	* pool.h, pool.c, serverchild.c:
	Added client entry to the shared memory status, and functions to pass
	the ip/resolved name of the current client to the pool manager

2007-04-05  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, configure, man/Makefile.in, modules/Makefile.in:
	regenerate autoconf files

2007-04-03  Aaron Stone  <aaron@serendipity.cx>

	* dbmailtypes.h, db.c:
	Moved definition of _db_params from the header to the C file (closes
	bug #453)

2007-04-02  Aaron Stone  <aaron@serendipity.cx>

	* configure.in, Makefile.am, modules/Makefile.am:
	Accepted patch to check if -lcrypt is necessary (closes bug #554)

2007-04-05  Paul J Stevens <paul@nfg.nl>

	* db.c:
	make the UIDNEXT value more rfc compliant
	* imapcommands.c:
	during expunge call remove_uid without re-opening mailbox

2007-03-31  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	work around for OE bug

2007-03-29  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, pop3.c, tags:
	undo accidental changes
	* README.postfix, README.qmail, README.sieve, README.smtp, 
	README.solaris, README.usermap, acinclude.m4, check_dbmail_auth.c, 
	check_dbmail_common.c, check_dbmail_db.c, check_dbmail_deliver.c, 
	check_dbmail_dsn.c, check_dbmail_imapd.c, check_dbmail_mailbox.c, 
	check_dbmail_message.c, check_dbmail_misc.c, check_dbmail_server.c, 
	check_dbmail_user.c, check_dbmail_util.c, config.c, 
	contrib/mailbox2dbmail/mailbox2dbmail, db.c, dbmail-imapsession.c, 
	dbmail-message.c, dbmail-user.c, dbmodule.c, debian/README.Debian, 
	debug.c, dm_imaputil.c, dm_md5.c, dsn.c, export.c, imap4.c, 
	imapcommands.c, imapd.c, list.c, lmtp.c, lmtpd.c, main.c, 
	maintenance.c, memblock.c, misc.c, modules/Makefile.am, 