@@ -25,7 +25,7 @@ static FILE *scoreFD;
 extern volatile sig_atomic_t GeneralStopRequested;
 extern ChildInfo_t childinfo;
 
-static child_state_t state_new(void); 
+static void state_reset(child_state_t *child); 
 static int set_lock(int type);
 static pid_t reap_child(void);
 
@@ -37,15 +37,14 @@ static pid_t reap_child(void);
  *
  */
 
-child_state_t state_new(void)
+void state_reset(child_state_t *s)
 {
-	child_state_t s;
-	s.pid = -1;
-	s.ctime = time(0);
-	s.status = STATE_NOOP;
-	s.count = 0;
-	strncat(s.client, "none", 127);
-	return s;
+	s->pid = -1;
+	s->ctime = time(0);
+	s->status = STATE_NOOP;
+	s->count = 0;
+	memset(s->client, '\0', 128);
+	memset(s->user, '\0', 128);
 }
 
 int set_lock(int type)
@@ -122,7 +121,7 @@ void scoreboard_setup(void) {
 	int i;
 	scoreboard_wrlck();
 	for (i = 0; i < HARD_MAX_CHILDREN; i++)
-		scoreboard->child[i] = state_new();
+		state_reset(&scoreboard->child[i]);
 	scoreboard_unlck();
 }
 
@@ -187,7 +186,7 @@ void scoreboard_release(pid_t pid)
 		return;
 	
 	scoreboard_wrlck();
-	scoreboard->child[key] = state_new();
+	state_reset(&scoreboard->child[key]);
 	scoreboard_unlck();
 }
 
@@ -337,7 +336,7 @@ void child_reg_connected(void)
 	scoreboard_unlck();
 }
 
-void child_reg_connected_details(char *ip, char *name)
+void child_reg_connected_client(char *ip, char *name)
 {
 	int key;
 	pid_t pid;
@@ -351,9 +350,29 @@ void child_reg_connected_details(char *ip, char *name)
 	scoreboard_wrlck();
 	if (scoreboard->child[key].status == STATE_CONNECTED) {
 		if (name && name[0])
-			strncat(scoreboard->child[key].client, name, 127);
+			strncpy(scoreboard->child[key].client, name, 127);
 		else
-			strncat(scoreboard->child[key].client, ip, 127);
+			strncpy(scoreboard->child[key].client, ip, 127);
+	} else {
+		TRACE(TRACE_MESSAGE, "client disconnected before status detail was logged");
+	}
+	scoreboard_unlck();
+}
+
+void child_reg_connected_user(char *user)
+{
+	int key;
+	pid_t pid;
+	
+	pid = getpid();
+	key = getKey(pid);
+	
+	if (key == -1) 
+		TRACE(TRACE_FATAL, "unable to find this pid on the scoreboard");
+	
+	scoreboard_wrlck();
+	if (scoreboard->child[key].status == STATE_CONNECTED) {
+		strncpy(scoreboard->child[key].user, user, 127);
 	} else {
 		TRACE(TRACE_MESSAGE, "client disconnected before status detail was logged");
 	}
@@ -373,7 +392,8 @@ void child_reg_disconnected(void)
 	
 	scoreboard_wrlck();
 	scoreboard->child[key].status = STATE_IDLE;
-	strncat(scoreboard->child[key].client, "none", 127);
+	memset(scoreboard->child[key].client, '\0', 128);
+	memset(scoreboard->child[key].user, '\0', 128);
 	scoreboard_unlck();
 }
 
@@ -559,20 +579,32 @@ void scoreboard_state(void)
 		TRACE(TRACE_ERROR, "Couldn't write scoreboard state to top file [%s].",
 			strerror(errno));
 	}
+
+	// Fixed 78 char output width.
+	if ((printlen = fprintf(scoreFD, "%8s%8s%8s%8s%22s%22s\n\n",
+		"Child", "PID", "Status", "Count", "Client", "User") <= 0)
+	  || !(scorelen += printlen)) {
+		TRACE(TRACE_ERROR, "Couldn't write scoreboard state to top file [%s].",
+			strerror(errno));
+	}
+
 	for (i = 0; i < scoreboard->conf->maxChildren; i++) {
 		int chpid, status;
-		char *client;
+		char *client, *user;
 		unsigned count;
 		
 		scoreboard_rdlck();
 		chpid = scoreboard->child[i].pid;
 		status = scoreboard->child[i].status;
-		client = scoreboard->child[i].client;
 		count = scoreboard->child[i].count;
+		client = scoreboard->child[i].client;
+		user = scoreboard->child[i].user;
 		scoreboard_unlck();
 
-		if ((printlen = fprintf(scoreFD, "Child %d Pid %d Status %d Count %u Client %s\n",
-			i, chpid, status, count, client)) <= 0
+		// Matching 78 char fixed width as above.
+		// Long hostnames may make the output a little messy.
+		if ((printlen = fprintf(scoreFD, "%8d%8d%8d%8u%22s%22s\n",
+			i, chpid, status, count, client, user)) <= 0
 		  || !(scorelen += printlen)) {
 			TRACE(TRACE_ERROR, "Couldn't write scoreboard state to top file [%s].",
 				strerror(errno));
