@@ -1,3 +1,10 @@
+2007-04-07  Aaron Stone  <aaron@serendipity.cx>
+
+	* pool.h, pool.c, lmtp.c, pop3.c, timsieve.c, imapcommands.c,
+	serverchild.c:
+	Further work on the scoreboard status output, and added currently
+	logged in user (pop3, imap, timsieve) or mail sender (lmtp)
+
 2007-04-06  Paul J Stevens <paul@nfg.nl>
 	
 	* README.usermap, UPGRADING:
